<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
    
    <ImageView
        android:id="@+id/imgView_logo"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginLeft="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/empty_todo"
        android:src="@drawable/ic_yt_logo"
        android:layout_marginStart="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_logo_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="75dp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginStart="75dp" />
    
    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgView_logo"
        android:visibility="gone">
    
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_name"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    
    <LinearLayout
        android:id="@+id/liley1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/login_user"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/tb_bg"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:autofillHints="yes"
        android:hint="@string/hint"
        android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="30dp"
            android:text="@string/login_pass"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tb_bg"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:autofillHints="yes" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/tb_bg"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/login_sub"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginStart="50dp" />

    </LinearLayout>

    </RelativeLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/login_reg"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"/>
        
        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/login_for_pass"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>